# NLP_1

./: .gitignore  README.md  baseline_tagger.py  lexicon.py  performance.py  pyproject.toml  questions.md  requirements.txt  resources.py  sentences.py  sentences.txt  tokenizer.py  training  training.py  translate.py  utils.py  viterbi.py  viterbi_tagger.py
Relazione/: 01_PosTagger.md  02_PosReordering.md  03_perfection.md  Makefile
relazione/: 01_intro.md  Makefile  relazione.md  tab.tex
relazione_old/: 00_introduzione.md
resources/: en_to_it.yaml  lexicon_en.yaml  lexicon_it.yaml
tagger/: __init__.py  abc.py  baseline_tagger.py  evaluation.py  hmm.py  hmm_tagger.py  smoothing.py  viterbi_tagger.py
test/: conftest.py  test_reordering.py  test_tagger.py  test_utils.py  test_viterbi.py
translate/: data.py  disambiguate.py  features.py  omniscent_tagger.py  oracle_tagger.py  perfection.py  pos_reordering.py  translate.py  translator.py
