[tool.poetry]
name = "pos_tagger"
version = "0.1.0"
description = ""
authors = ["Alessandro Caputo", "Emanuele Gentiletti"]

[tool.poetry.dependencies]
python = "^3.9"
pyconll = "^3.0.4"
toolz = "^0.11.1"
tabulate = "^0.8.9"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
